--- a/week04-JSON-AJAX/Lab04-ajax-readsimple2.html
+++ b/week04-JSON-AJAX/Lab04-ajax-readsimple2.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.
-min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js>
+	</script>
 	<title>Lab 03</title>
 	</head>
 	<body>
